--- a/styles.css
+++ b/styles.css
@@ -32,12 +32,16 @@ span {
 }
 
 .background {
+    width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
-
+    overflow: hidden;
+    position: relative;
+    filter: url(#goo);
 
 }
+
 
 .songContainer {
     display: flex;
@@ -115,4 +119,107 @@ span {
 .stop:hover {
     font-size: 1.1rem;
     box-shadow: 0 0 0.5rem darkgray;
+}
+
+.particle {
+    width: 100px;
+    height: 100px;
+    top: -20%;
+    background: #777;
+    position: absolute;
+    z-index: -10;
+    border-radius: 50%;
+    animation: fall 15s infinite;
+}
+
+@keyframes fall {
+    0% {top: -20%;}
+    20% {top: 0%;}
+    80% {top: 85%;}
+    100% {top: 100%;}
+}
+
+.particle:nth-of-type(2n) {
+    width: 60px;
+    height: 60px;
+}
+.particle:nth-of-type(3n) {
+    width: 120px;
+    height: 120px;
+}
+.particle:nth-of-type(1) {
+    left: 30%;
+    animation-delay: 1s;
+}
+.particle:nth-of-type(2) {
+    left: 60%;
+    animation-delay: 2s;
+}
+.particle:nth-of-type(3) {
+    left: 25%;
+    animation-delay: 3s;
+}
+.particle:nth-of-type(4) {
+    left: 75%;
+    animation-delay: 4s;
+}
+.particle:nth-of-type(5) {
+    left: 35%;
+    animation-delay: 5s;
+}
+.particle:nth-of-type(6) {
+    left: 50%;
+    animation-delay: 6s;
+}
+.particle:nth-of-type(7) {
+    left: 65%;
+    animation-delay: 77s;
+}
+.particle:nth-of-type(8) {
+    left: 35%;
+    animation-delay: 8s;
+}
+.particle:nth-of-type(9) {
+    left: 55%;
+    animation-delay: 9s;
+}
+.particle:nth-of-type(10) {
+    left: 55%;
+    animation-delay: 10s;
+}
+.particle:nth-of-type(11) {
+    left: 35%;
+    animation-delay: 11s;
+}
+.particle:nth-of-type(12) {
+    left: 50%;
+    animation-delay: 12s;
+}
+.particle:nth-of-type(13) {
+    left: 65%;
+    animation-delay: 13s;
+}
+.particle:nth-of-type(14) {
+    left: 40%;
+    animation-delay: 14s;
+}
+.particle:nth-of-type(15) {
+    left: 60%;
+    animation-delay: 15s;
+}
+
+.border {
+    position: absolute;
+    background: #777;
+    width: 100%;
+    height: 10%;
+}
+
+.bTop {
+    top: 0;
+    left: 0;
+}
+.bBottom {
+    bottom: 0;
+    left: 0;
 }
