--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ html {
 body {
     background: black;
     color: white;
+    overflow: hidden;
+    font-family: 'Roboto Serif', serif;
+    font-weight: 400;
 }
 
 h1,
@@ -24,6 +27,23 @@ span {
     padding: 0;
     margin: 0;
 }
+
+h1 {
+    font-weight: 600;
+    font-size: 3rem;
+}
+
+h2 {
+    font-weight: 400;
+    font-size: 1.2rem;
+    padding-bottom: 7px;
+}
+
+p {
+    line-height: 1.3em;
+    font-size: 0.9rem;
+}
+
 
 .wrapper {
     max-width: 1000px;
@@ -42,19 +62,26 @@ span {
 
 }
 
+.contentContainer {
+   margin: 70px auto 0 auto;
+}
+
+
+
 
 .songContainer {
     display: flex;
     background: #222422;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.5rem 5.5rem darkgrey;
+    border-radius: 1.5rem;
+    box-shadow: 0 0rem 3rem darkgrey;
+    margin-bottom: 50px;
 }
 
 .imageContainer img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 0.5rem;
+    border-radius: 1.5rem;
 }
 
 .details {
@@ -65,6 +92,7 @@ span {
 .player {
     width: 100%;
     height: 100%;
+    padding: 15px 15px 0 15px;
 }
 
 .time {
@@ -101,24 +129,61 @@ span {
     background: darkred;
     color: black;
     cursor: pointer;
-    border-radius: 50%;
+    border-radius: 45%;
     box-shadow: 0 0 0rem darkgray;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1rem;
+    font-size: 0.9rem;
     padding: 4px 0 0 0;
     transition: all 0.2s ease-out;
 }
 
+
+
 .playPause:hover {
     font-size: 1.6rem;
-    box-shadow: 0 0 0.5rem darkgray;
+    box-shadow: 0 0 0.2rem black;
 }
 
+
 .stop:hover {
-    font-size: 1.1rem;
-    box-shadow: 0 0 0.5rem darkgray;
+    font-size: 1rem;
+    box-shadow: 0 0 0.2rem black;
+}
+
+
+.contentImage {
+    width: 100px;
+    height: 100px;
+    border-radius: 7px;
+}
+
+.description {
+    width: 100%;
+    text-align: center;
+    padding: 0 160px;
+
+}
+
+.question {
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+}
+
+footer div i {
+    margin: 0 10px;
+    font-size: 1.3rem;
+}
+
+footer div {
+    padding-top: 30px;
 }
 
 .particle {
@@ -222,4 +287,60 @@ span {
 .bBottom {
     bottom: 0;
     left: 0;
+}
+
+@media (max-width: 1000px) {
+    .border {
+        height: 7%;
+    }
+
+
+}
+@media (max-width: 820px) {
+   .songContainer {
+       width: 100%;
+   }
+
+   .description {
+       padding: 0;
+   }
+
+
+}
+@media (max-width: 750px) {
+    .particle, .border {
+        display: none;
+
+    }
+
+    .background {
+        filter: none;
+        overflow-y:scroll;
+        height: 1200px;
+    }
+    
+    body {
+        overflow-y:scroll ;
+
+    }
+
+
+
+    svg {
+        display: none;
+    }
+
+    .songContainer {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 750px) {
+    .details {
+        flex-direction: column;
+    }
+
+    .controls {
+    margin-top: 12px;
+    }
 }
